modified: layout, added new note designs, updated intro

--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,16 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Disolv Documentation"
+
+[preprocessor]
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
+
+[preprocessor.alerts]
+
+[output]
+
+[output.html]
+additional-css = ["./mdbook-admonish.css"]
